Closed Bug 949324 Opened 12 years ago Closed 12 years ago

Fix -Wunused-function warnings in js/

Categories

(Core :: JavaScript Engine: JIT, defect)

x86
macOS
defect
Not set
trivial

Tracking

()

RESOLVED FIXED
mozilla29
Tracking Status
firefox28 --- unaffected
firefox29 --- fixed

People

(Reporter: cpeterson, Assigned: cpeterson)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

These functions are only called from DEBUG code: js/src/jit/IonMacroAssembler.cpp:1219:1 [-Wunused-function] unused function 'AssumeUnreachable_' js/src/shell/js.cpp:3597:1 [-Wunused-function] unused function 'PropagateFlagToNestedShells'
Attachment #8346372 - Flags: review?(luke)
Attachment #8346372 - Flags: review?(luke) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: