Bug 949324 - Fix -Wunused-function warnings in js/. r=luke